--- a/chronos-app/package.json
+++ b/chronos-app/package.json
@@ -10,12 +10,13 @@
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "1.18.2",
+    "@react-native-community/blur": "^4.3.2",
     "@react-native-community/datetimepicker": "7.2.0",
     "@react-native-picker/picker": "2.4.10",
     "@react-navigation/bottom-tabs": "^6.5.10",
+    "@react-navigation/drawer": "^6.6.5",
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/stack": "^6.3.19",
-    "@react-navigation/drawer": "^6.6.5",
     "expo": "~49.0.13",
     "expo-app-loading": "^2.1.1",
     "expo-av": "~13.4.1",
@@ -29,8 +30,8 @@
     "lottie-react-native": "5.1.6",
     "react": "18.2.0",
     "react-native": "0.72.6",
-    "react-native-device-info": "^10.11.0",
     "react-native-calendars": "^1.1301.0",
+    "react-native-device-info": "^10.11.0",
     "react-native-gesture-handler": "~2.12.0",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-permissions": "^3.10.0",
