--- a/chronos-app/package.json
+++ b/chronos-app/package.json
@@ -29,11 +29,13 @@
     "expo-status-bar": "~1.6.0",
     "lottie-react-native": "5.1.6",
     "react": "18.2.0",
+    "react-modal": "^3.16.1",
     "react-native": "0.72.6",
     "react-native-calendars": "^1.1301.0",
     "react-native-device-info": "^10.11.0",
     "react-native-gesture-handler": "~2.12.0",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
+    "react-native-modal": "^13.0.1",
     "react-native-permissions": "^3.10.0",
     "react-native-reanimated": "~3.3.0",
     "react-native-safe-area-context": "4.6.3",
