--- a/chronos-app/package.json
+++ b/chronos-app/package.json
@@ -17,6 +17,7 @@
     "@react-navigation/drawer": "^6.6.5",
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/stack": "^6.3.19",
+    "base-64": "^1.0.0",
     "expo": "~49.0.13",
     "expo-app-loading": "^2.1.1",
     "expo-av": "~13.4.1",
@@ -39,7 +40,8 @@
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
     "react-native-swiper": "^1.6.0",
-    "react-native-vector-icons": "^10.0.0"
+    "react-native-vector-icons": "^10.0.0",
+    "expo-file-system": "~15.4.4"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
