--- a/chronos-app/package.json
+++ b/chronos-app/package.json
@@ -43,7 +43,8 @@
     "react-native-screens": "~3.22.0",
     "react-native-swiper": "^1.6.0",
     "react-native-vector-icons": "^10.0.0",
-    "expo-file-system": "~15.4.4"
+    "expo-file-system": "~15.4.4",
+    "expo-blur": "~12.4.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
