--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,20 +1,38 @@
+aiohttp==3.8.6
+aiosignal==1.3.1
+async-timeout==4.0.3
+attrs==23.1.0
 blinker==1.6.3
+certifi==2023.7.22
+charset-normalizer==3.3.2
 click==8.1.7
-Flask==3.0.0
+ffmpeg-python==0.2.0
+flask==3.0.0
 Flask-Cors==4.0.0
 Flask-JWT-Extended==4.5.3
-Flask-SQLAlchemy==3.1.1
+flask-sqlalchemy==3.1.1
+frozenlist==1.4.0
+future==0.18.3
 greenlet==3.0.0
+idna==3.4
 importlib-metadata==6.8.0
 itsdangerous==2.1.2
 Jinja2==3.1.2
 MarkupSafe==2.1.3
+multidict==6.0.4
+openai==0.28.1
 psycopg2-binary==2.9.9
 PyJWT==2.8.0
 python-decouple==3.8
 python-dotenv==1.0.0
+pyttsx3==2.90
 redis==5.0.1
+requests==2.31.0
+SpeechRecognition==3.10.0
 SQLAlchemy==2.0.22
-typing_extensions==4.8.0
-Werkzeug==3.0.0
+tqdm==4.66.1
+typing-extensions==4.8.0
+urllib3==2.0.7
+werkzeug==3.0.0
+yarl==1.9.2
 zipp==3.17.0
