--- a/chronos-app/package.json
+++ b/chronos-app/package.json
@@ -21,7 +21,9 @@
     "expo": "~49.0.13",
     "expo-app-loading": "^2.1.1",
     "expo-av": "~13.4.1",
+    "expo-blur": "~12.4.1",
     "expo-constants": "~14.4.2",
+    "expo-file-system": "~15.4.4",
     "expo-font": "~11.4.0",
     "expo-linear-gradient": "~12.3.0",
     "expo-linking": "~5.0.2",
@@ -34,6 +36,7 @@
     "react-native": "0.72.6",
     "react-native-calendars": "^1.1301.0",
     "react-native-device-info": "^10.11.0",
+    "react-native-fetch-blob": "^0.10.8",
     "react-native-gesture-handler": "~2.12.0",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-modal": "^13.0.1",
@@ -42,9 +45,7 @@
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
     "react-native-swiper": "^1.6.0",
-    "react-native-vector-icons": "^10.0.0",
-    "expo-file-system": "~15.4.4",
-    "expo-blur": "~12.4.1"
+    "react-native-vector-icons": "^10.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
