--- a/chronos-app/package.json
+++ b/chronos-app/package.json
@@ -25,19 +25,21 @@
     "expo-constants": "~14.4.2",
     "expo-file-system": "~15.4.4",
     "expo-font": "~11.4.0",
+    "expo-image-picker": "~14.3.2",
     "expo-linear-gradient": "~12.3.0",
     "expo-linking": "~5.0.2",
     "expo-permissions": "~14.2.1",
     "expo-router": "^2.0.0",
     "expo-status-bar": "~1.6.0",
+    "firebase": "^10.6.0",
     "lottie-react-native": "5.1.6",
     "react": "18.2.0",
     "react-modal": "^3.16.1",
     "react-native": "0.72.6",
     "react-native-calendars": "^1.1301.0",
     "react-native-device-info": "^10.11.0",
-    "react-native-fetch-blob": "^0.10.8",
     "react-native-gesture-handler": "~2.12.0",
+    "react-native-image-picker": "^7.0.2",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-modal": "^13.0.1",
     "react-native-permissions": "^3.10.0",
