--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -4,6 +4,7 @@ annotated-types==0.6.0
 anyio==3.7.1
 async-timeout==4.0.3
 attrs==23.1.0
+azure-cognitiveservices-speech==1.32.1
 blinker==1.6.3
 certifi==2023.7.22
 charset-normalizer==3.3.2
