--- a/chronos-app/package.json
+++ b/chronos-app/package.json
@@ -23,13 +23,14 @@
     "expo-av": "~13.4.1",
     "expo-blur": "~12.4.1",
     "expo-constants": "~14.4.2",
-    "expo-file-system": "~15.4.4",
+    "expo-file-system": "^15.4.5",
     "expo-font": "~11.4.0",
     "expo-image-picker": "~14.3.2",
     "expo-linear-gradient": "~12.3.0",
     "expo-linking": "~5.0.2",
     "expo-permissions": "~14.2.1",
     "expo-router": "^2.0.0",
+    "expo-speech": "~11.3.0",
     "expo-splash-screen": "~0.20.5",
     "expo-status-bar": "~1.6.0",
     "firebase": "^10.6.0",
@@ -48,8 +49,7 @@
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
     "react-native-swiper": "^1.6.0",
-    "react-native-vector-icons": "^10.0.0",
-    "expo-speech": "~11.3.0"
+    "react-native-vector-icons": "^10.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
