--- a/chronos-app/package.json
+++ b/chronos-app/package.json
@@ -23,7 +23,7 @@
     "expo-av": "~13.4.1",
     "expo-blur": "~12.4.1",
     "expo-constants": "~14.4.2",
-    "expo-file-system": "^15.4.5",
+    "expo-file-system": "~15.4.5",
     "expo-font": "~11.4.0",
     "expo-image-picker": "~14.3.2",
     "expo-linear-gradient": "~12.3.0",
